--- a/.classpath
+++ b/.classpath
@@ -32,7 +32,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="target/classes" path="${classpath}/target/generated/src/main/java">
+	<classpathentry kind="src" output="target/classes" path="target/generated/src/main/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
