inzio scrittur junit

--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>WebServiceClientGenerator</groupId>
-	<artifactId>WebServiceClientGenerator</artifactId>
+	<groupId>SoapWebServiceUtil</groupId>
+	<artifactId>SoapWebServiceUtil</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
+
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.1.7</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.22</version>
 		</dependency>
 
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-core</artifactId>
-			<version>1.1.7</version>
-		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+		</dependency>
+
 
 
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
@@ -34,15 +38,15 @@
 
 	</dependencies>
 	<build>
-		<finalName>adegua-parallelo-service-lite</finalName>
+		<finalName>soap-web-service-util</finalName>
 
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.6.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -73,14 +77,12 @@
 					<keep>true</keep>
 					<sourceDestDir>${basedir}/target/generated/src/main/java</sourceDestDir>
 					<wsdlLocation>/wsdl/*</wsdlLocation>
-              		<wsdlDirectory>${basedir}/src/main/resources/wsdl</wsdlDirectory>
+					<wsdlDirectory>${basedir}/src/main/resources/wsdl</wsdlDirectory>
 					<wsdlFiles>
 						<wsdlFile>globalweather.wsdl</wsdlFile>
 					</wsdlFiles>
-					<!-- <wsdlUrls>
-						<wsdlUrl> http://www.webservicex.net/globalweather.asmx?WSDL
-						</wsdlUrl>
-					</wsdlUrls> -->
+					<!-- <wsdlUrls> <wsdlUrl> http://www.webservicex.net/globalweather.asmx?WSDL 
+						</wsdlUrl> </wsdlUrls> -->
 				</configuration>
 				<executions>
 					<execution>
